css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;

  font: normal 100%/1.3 "Crimson Text";
  color: #222;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body,
article h1,
blockquote {
  margin: 0;
}

article header,
article ol,
p {
  margin: 0 0 1.3rem;
}

article {
  margin-left: auto;
  margin-right: auto;
  padding: 1.3rem 1rem 0;
  width: 100%;
  max-width: 43em;
}

article h1 {
  font-weight: normal;
}

article header {
  border-bottom: 1px solid #999;
}

article header p {
  font-style: italic;
}

article > p:last-child {
  border-bottom: 1px solid #999;
  padding-bottom: 1.3rem;
}

blockquote {
  max-width: 24em;
  color: #555;
  font-size: 1.125rem;
}

article ol {
  padding-left: 1rem;
}

.quote {
  color: #999;
}

@media only screen and (min-width: 38em) {

  html {
    font-size: 110%;
    line-height: 1.4;
  }

  article header,
  article ol,
  p {
    margin: 0 0 1.4rem;
  }

  article {
    padding-top: : 1.4rem;
  }

  article > p:last-child {
    padding-bottom: 1.4rem;
  }

}

@media only screen and (min-width: 60em) {



}

@media only screen and (min-width: 90em) {



}

/*
- *Typefaces:* `Crimson Text` (regular, italic)
- *Left/right text padding:* `1rem`
- *For the best vertical rhythm:* remove the top margins from things & add bottom margins equal to the line-height. [Follow the font-size and margin settings in the screen sizes cheat sheet.](https://learn-the-web.algonquindesign.ca/topics/screen-sizes-cheat-sheet/)
*/

